add these lines of code

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Contact
 </div>
 <div class="nav-side-item">
 <div class="get-btn">
-<a href="contact.html" class="default-btn btn-bg-two border-radius-50">Get A Quote <i class='bx bx-chevron-right'></i></a>
+<a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
 </div>
 </div>
 </div>
@@ -338,13 +338,12 @@ Contact
 <div class="container">
 <div class="banner-item-content">
 <span>Only High Quality Services</span>
-<h1>Excellent IT Services for Your Success</h1>
+<h1>For Convenient Shopping</h1>
 <p>
-Aenean Sollicitudin, Lorem quis Bibendum auctor, nisi elit consequat ipsum,
-nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet
+Go to our online store to shop remotely , Conveniently and rightly delivered to your doorstep.
 </p>
 <div class="banner-btn">
-<a href="about.html" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
+<a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">shop Online <i class='bx bx-chevron-right'></i></a>
 <a href="contact.html" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a>
 </div>
 </div>
@@ -358,10 +357,9 @@ nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a si
 <div class="container">
 <div class="banner-item-content">
 <span>Only High Quality Services</span>
-<h1>We Provide Best IT Services for Your Need</h1>
+<h1>We Provide Best IT Supplies & Services for Your Need</h1>
 <p>
-Aenean Sollicitudin, Lorem quis Bibendum auctor, nisi elit consequat ipsum,
-nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet
+We have a wide range of products from our partner brands which include HP, DELL, LENOVO, APC, KINGSONS CISCO, SEAGATE and others
 </p>
 <div class="banner-btn">
 <a href="about.html" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
@@ -371,7 +369,7 @@ nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a si
 </div>
 </div>
 </div>
-</div>
+</div> 
 <div class="banner-item item-bg3">
 <div class="d-table">
 <div class="d-table-cell">
