--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <link rel="stylesheet" href="assets/css/meanmenu.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/responsive.css">
-<link rel="icon" type="image/png" href="assets/images/favicon.png">
+<link rel="icon" type="image/png" href="assets/images/favicon.jpg">
+<link rel="icon" type="image/png" href="https://www.littlesnippets.net/css/codepen-result.css">
 <title>LAKHI HIGHTECH</title>
 </head>
 <body>
@@ -357,7 +358,7 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
 <div class="container">
 <div class="banner-item-content">
 <span>Only High Quality Services</span>
-<h1>We Provide Best IT Supplies & Services for Your Need</h1>
+<h1>We Provide Best IT Supplies for Your Needs</h1>
 <p>
 We have a wide range of products from our partner brands which include HP, DELL, LENOVO, APC, KINGSONS CISCO, SEAGATE and others
 </p>
@@ -378,8 +379,7 @@ We have a wide range of products from our partner brands which include HP, DELL,
 <span>Only High Quality Services</span>
 <h1>Digital IT Service With Excellent Quality</h1>
 <p>
-Aenean Sollicitudin, Lorem quis Bibendum auctor, nisi elit consequat ipsum,
-nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet
+  We provide the best in Customized Desktop Softwares, E-Commerce Websites, Educational Websites And Portals.
 </p>
 <div class="banner-btn">
 <a href="about.html" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
@@ -394,22 +394,30 @@ nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a si
 </div>
 
 <!-- clients -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-          <ul class="horizontal-slide">
-            <li class="col-md-2"> <img src="assets/images/brand-logo/HP.png"/></li>
-            <li class="col-md-2"> <img src="assets/images/brand-logo/DELL.png"/></li>
-            <li class="col-md-2"><img src="assets/images/brand-logo/epson.png"/></li>
-            <li class="col-md-2">  <img src="assets/images/brand-logo/apc.png"/></li>
-            <li class="col-md-2"><img src="assets/images/brand-logo/ids.png"/></li>
-            <li class="col-md-2"><img src="assets/images/brand-logo/lenovo.png"/></li>
-            <li class="col-md-2"><img src="assets/images/brand-logo/cisco.png"/></li>
-          </ul>
-      </div>
-    </div>
-</div>
-</div>
+<!-- <div class="brand-area ptb-100">
+  <div class="container">
+  <div class="brand-slider owl-carousel owl-theme">
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/HP.png"/>
+  </div>
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/DELL.png"/>
+  </div>
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/epson.png"/>
+  </div>
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/apc.png"/>
+  </div>
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/ids.png"/>
+  </div>
+  <div class="brand-item">
+    <img src="assets/images/brand-logo/lenovo.png"/>
+  </div>
+  </div>
+  </div>
+  </div> -->
 
 
 <div class="about-area ptb-100">
@@ -459,48 +467,18 @@ nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a si
 </div>
 
 
+
 <section class="services-area pt-100 pb-70">
 <div class="container">
-<div class="section-title text-center">
-<span class="sp-color1">Our Services</span>
-<h2>We Provide a Wide Variety of IT Services</h2>
-<p class="margin-auto">
-Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris Morbi accumsan ipsum velit.
-</p>
-</div>
-<div class="row pt-45">
-<div class="col-lg-3 col-sm-6">
-<div class="services-card">
-<i class="flaticon-consultant"></i>
-<h3><a href="service-details.html">IT Consulting</a></h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendauctor nisi el. </p>
-<a href="service-details.html" class="learn-btn">Learn More <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
-<div class="col-lg-3 col-sm-6">
-<div class="services-card">
-<i class="flaticon-consulting"></i>
-<h3><a href="service-details.html">Cloud Computing</a></h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendauctor nisi el. </p>
-<a href="service-details.html" class="learn-btn">Learn More <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
-<div class="col-lg-3 col-sm-6">
-<div class="services-card">
-<i class="flaticon-web-development"></i>
-<h3><a href="service-details.html">Web Development</a></h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendauctor nisi el. </p>
-<a href="service-details.html" class="learn-btn">Learn More <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
-<div class="col-lg-3 col-sm-6">
-<div class="services-card">
-<i class="flaticon-stats"></i>
-<h3><a href="service-details.html">Business Reform</a></h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendauctor nisi el. </p>
-<a href="service-details.html" class="learn-btn">Learn More <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
+  <div class="section-title text-center">
+    <!-- <span class="sp-color1">Our Services</span> -->
+    <h2>Our Vision</h2>
+    <p class="margin-auto">
+      As adoption of new web technologies for interaction continues to rise at unprecedented levels, the expectations from the ecosystem of businesses are also evolving. Businesses are responding with offerings and solutions that leverage this knowledge to be more personal, intelligent and contextual in each interaction with their stakeholders. Leading to new revenue streams and increased operational efficiency.
+    </p>
+    <p class="margin-auto">Enterprises need to rapidly bring in this innovation to their offerings in a way that it leverages existing investments and does not create new problems in the future - and make the right technology choices in a standardized, re-usable manner. In addition to adopting the right technology for their requirements, they also need viable models for support and management on an ongoing basis.</p>
+  <p class="margin-auto">Lakhi hightech Ltd. is focused on accelerating this adoption of new technologies for enterprises with its unique stack of products and services.</p> 
+  </div>
 </div>
 </div>
 <div class="service-shape">
@@ -509,82 +487,143 @@ Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec 
 </section>
 
 
+
+
+
 <section class="work-process-area pt-100 pb-70">
 <div class="container">
 <div class="section-title text-center">
-<span class="sp-color2">Our Working Process</span>
-<h2>How Our Services Will Help You to Grow Your Business</h2>
+<span class="sp-color2">Our services</span>
+<!-- <h2>We provide a wide range for Solutions as per your customization</h2> -->
 </div>
 <div class="row pt-45">
 <div class="col-lg-3 col-sm-6">
 <div class="work-process-card">
-<i class="flaticon-project"></i>
-<h3>Discovery</h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+<!-- <i class="flaticon-project"></i> -->
+<h3>ERP Implementation and support</h3>
+  <p>When it comes to running your business smoothly and efficiently, there are few investments more important than an Enterprise Resource Planning (ERP) system.</p>
+
 <div class="number">01</div>
 </div>
 </div>
 <div class="col-lg-3 col-sm-6">
 <div class="work-process-card">
-<i class="flaticon-chip"></i>
-<h3>Planning</h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+<!-- <i class="flaticon-chip"></i> -->
+<h3>Software Development</h3>
+<p>Lakhi hightech has wide experience in software applications development. Our team of well-qualified professional software developers provides complete support, </p>
 <div class="number">02</div>
 </div>
 </div>
 <div class="col-lg-3 col-sm-6">
 <div class="work-process-card">
-<i class="flaticon-effective"></i>
-<h3>Execute</h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+<!-- <i class="flaticon-effective"></i> -->
+<h3>Content Development</h3>
+<p>Since ages, content is presented through newspapers, magazine, brochures, etc. In today’s virtual world: content is displayed through websites, emailers, newsletters, digital brochures and online formats of newspapers</p>
 <div class="number">03</div>
 </div>
 </div>
 <div class="col-lg-3 col-sm-6">
 <div class="work-process-card">
-<i class="flaticon-bullhorn"></i>
-<h3>Deliver</h3>
-<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+<!-- <i class="flaticon-bullhorn"></i> -->
+<h3>Application development</h3>
+<p>Information technology has turned the world to technical by making its sound presence in each and every corporate sector. Everyone in the society from a farmer to an expert scientist is taking pure advantage of IT</p>
 <div class="number">04</div>
 </div>
 </div>
+
+<div class="col-lg-3 col-sm-6">
+  <div class="work-process-card">
+  <!-- <i class="flaticon-bullhorn"></i> -->
+  <h3>Web solutions</h3>
+  <p>Lakhi Hightech Pvt. Ltd. is a renewed IT company that provides website designing, Development, Hosting, SEO, Short code, Mass mailing, Voice Calls, and many more online promotion services. We offer solutions for both individuals and small & medium scaled business set-ups at competitive prices.</p>
+  <div class="number">05</div>
+  </div>
+  </div>
+
+  <div class="col-lg-3 col-sm-6">
+    <div class="work-process-card">
+    <!-- <i class="flaticon-bullhorn"></i> -->
+    <h3>Network solutions</h3>
+    <p>Lakhi Hightech Pvt. Ltd. is a renewed IT company that provides website designing, Development, Hosting, SEO, Short code, Mass mailing, Voice Calls, and many more online promotion services. We offer solutions for both individuals and small & medium scaled business set-ups at competitive prices.</p>
+    <div class="number">06</div>
+    </div>
+    </div>
+
+    <div class="col-lg-3 col-sm-6">
+      <div class="work-process-card">
+      <!-- <i class="flaticon-bullhorn"></i> -->
+      <h3>Oracle solutions</h3>
+      <p>Lakhi Hightech Pvt. Ltd. is a renewed IT company that provides website designing, Development, Hosting, SEO, Short code, Mass mailing, Voice Calls, and many more online promotion services. We offer solutions for both individuals and small & medium scaled business set-ups at competitive prices.</p>
+      <div class="number">07</div>
+      </div>
+      </div>
+
+      <div class="col-lg-3 col-sm-6">
+        <div class="work-process-card">
+        <!-- <i class="flaticon-bullhorn"></i> -->
+        <h3>Website Portfolio</h3>
+        <p>Lakhi Hightech Pvt. Ltd. is a renewed IT company that provides website designing, Development, Hosting, SEO, Short code, Mass mailing, Voice Calls, and many more online promotion services. We offer solutions for both individuals and small & medium scaled business set-ups at competitive prices.</p>
+        <div class="number">08</div>
+        </div>
+        </div>
 </div>
 </div>
 </section>
 
+<main class="deals">
+  <article class="sale-item">
+    <h1>Computers & accessories</h1>
+    <img src="assets/images/home-one/computers.jpeg" alt="">
+    <button>CHECK PRODUCT</button>
+  </article>
+  
+  <article class="sale-item">
+    <h1>Printers & Supplies</h1>
+    <img src="assets/images/home-one/printers.jpeg">
+    <button>CHECK PRODUCT</button>
+  </article>
 
-<div class="build-area pt-100 pb-70">
-<div class="container">
-<div class="row align-items-center">
-<div class="col-lg-8 col-md-8">
-<div class="build-content">
-<div class="section-title">
-<span>We Carry More Than Just Good Coding Skills</span>
-<h2>Let's Build Your Website!</h2>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-4">
-<div class="build-btn-area">
-<a href="contact.html" class="default-btn btn-bg-two border-radius-50">Contact Us <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
-</div>
-<div class="build-play-img pt-45">
-<img src="assets/images/build-img.jpg" alt="Images">
-<div class="play-area-content">
-<span>Watch Our Intro Video</span>
-<h2>Perfect Solution for IT Services!</h2>
-</div>
-<div class="play-area">
-<a href="https://www.youtube.com/watch?v=tUP5S4YdEJo" class="play-on popup-btn"><i class='bx bx-play'></i></a>
-</div>
-</div>
-</div>
-</div>
+  <article class="sale-item">
+    <h1>Mobile & Tablets</h1>
+    <p></p>
+    <img src="assets/images/home-one/mobile.jpeg">
+    <button>CHECK PRODUCT</button>
+  </article>
+
+  <article class="sale-item">
+    <h1>UPS & Power Invertors</h1>
+    <img src="assets/images/home-one/ups.jpeg">
+    <p></p>
+    <button>CHECK PRODUCT</button>
+  </article>
+
+  <article class="sale-item">
+    <h1>Projector & accessories</h1>
+    <p></p>
+    <img src="assets/images/home-one/projector.jpeg">
+    <button>CHECK PRODUCT</button>
+  </article>
+
+  <article class="sale-item">
+    <h1>Networking & accessories</h1>
+    <p></p>
+    <img src="assets/images/home-one/networking.jpeg">
+    <button>CHECK PRODUCT</button>
+  </article>
+
+  <article class="sale-item">
+    <h1>IP Cameras & PBX</h1>
+    <p></p>
+    <img src="assets/images/home-one/IP Cameras.jpeg">
+    <button>CHECK PRODUCT</button>
+  </article>
+
+</main>
 
 
-<div class="counter-area pb-70">
+
+
+<!-- <div class="counter-area pb-70">
 <div class="container">
 <div class="section-title text-center">
 <span class="sp-color2">Numbers Are Talking</span>
@@ -630,9 +669,9 @@ Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec 
 <img src="assets/images/shape/shape2.png" alt="Images">
 </div>
 </div>
-</div>
+</div> -->
 
-
+<!-- 
 <div class="call-us-area">
 <div class="container">
 <div class="row align-items-center">
@@ -750,9 +789,9 @@ Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec 
 </div>
 </div>
 </div>
+ -->
 
-
-<section class="technology-area pt-100 pb-70">
+<!-- <section class="technology-area pt-100 pb-70">
 <div class="container">
 <div class="section-title text-center">
 <span class="sp-color1">Technology Index</span>
@@ -990,7 +1029,7 @@ sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
 <footer class="footer-area footer-bg">
@@ -1001,15 +1040,15 @@ sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris
 <div class="footer-widget">
 <div class="footer-logo">
 <a href="index.html">
-<img src="assets/images/logos/footer-logo.png" alt="Images">
+<img src="assets/images/logos/logo-1.PNG" alt="Images">
 </a>
 </div>
 <p>
-Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auct.Aenean, lorem quis bibendum auct. Aenean sollicitudin lorem.
+
 </p>
 <div class="footer-call-content">
 <h3>Talk to Our Support</h3>
-<span><a href="tel:+1002-123-4567">+1 002-123-4567</a></span>
+<span><a href="tel:+256753300052">+256753300052</a></span>
 <i class='bx bx-headphone'></i>
 </div>
 </div>
@@ -1021,43 +1060,43 @@ Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bib
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
-IT Consultancy
+ERP Implementation & support
 </a>
 </li>
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
-Business Solution
+Softare Development
 </a>
 </li>
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
-Digital Services
+Content Development
 </a>
 </li>
 <li>
 <a href="compare.html" >
 <i class='bx bx-chevron-right'></i>
-Business Reform
+Application Development
 </a>
 </li>
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
-Web Development
+Website Portfolio
 </a>
 </li>
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
- Cloud Computing
+ Web - solutions
 </a>
 </li>
 <li>
 <a href="service-details.html" >
 <i class='bx bx-chevron-right'></i>
-Data Analysis
+Network Solutions
 </a>
 </li>
 </ul>
@@ -1073,7 +1112,7 @@ Data Analysis
 </a>
 <div class="content">
 <h3><a href="blog-details.html">Product Idea Solution For New Generation</a></h3>
-<span>04 Dec 2020</span>
+<span>04 Dec 2021</span>
 </div>
 </li>
 <li>
@@ -1082,7 +1121,7 @@ Data Analysis
 </a>
 <div class="content">
 <h3><a href="blog-details.html">New Device Invention for Digital Platform</a></h3>
-<span>07 Dec 2020</span>
+<span>07 Dec 2021</span>
 </div>
 </li>
 <li>
@@ -1091,7 +1130,7 @@ Data Analysis
 </a>
 <div class="content">
 <h3><a href="blog-details.html">Business Strategy Make His Goal Acheive</a></h3>
-<span>10 Dec 2020</span>
+<span>10 Dec 2021</span>
 </div>
 </li>
 </ul>
@@ -1117,8 +1156,8 @@ Data Analysis
 <div class="copy-right-area">
 <div class="copy-right-text">
  <p>
-Copyright ©2021 Biju. All Rights Reserved by
-<a href="https://www.templatemonster.com/authors/abusayed/" >Abusayed Shuvo</a>
+Copyright ©2021. All Rights Reserved by 
+<a href="#" >Lakhi hightech ltd</a>
 </p>
 </div>
 </div>
@@ -1147,8 +1186,8 @@ Copyright ©2021 Biju. All Rights Reserved by
 <script src="assets/js/contact-form-script.js"></script>
 
 <script src="assets/js/custom.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 </body>
  
-
-<!-- Mirrored from themes.abusayedshuvo.com/technology/default/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Nov 2021 13:07:17 GMT -->
 </html>
