add modified changes

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ Online Shopping Updates
 </ul>
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link">
+<a href="expertise.html" class="nav-link">
 Expertise
-<i class='bx bx-caret-down'></i>
+
 </a>
-<ul class="dropdown-menu">
+<!-- <ul class="dropdown-menu">
 <li class="nav-item">
 <a href="services-1.html" class="nav-link">ERP Implementation & Support</a>
 </li>
@@ -187,7 +187,7 @@ Expertise
     <a href="service-details.html" class="nav-link">Web, oracle & Network Solutions</a>
     </li>
 
-</ul>
+</ul> -->
 </li>
 <li class="nav-item">
 <a href="#" class="nav-link">
