modify the changes made

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="top-header-social">
 <ul>
 <li>
-<a href="#" >
+<a href="https://www.facebook.com/lakhihightech" >
 <i class='bx bxl-facebook'></i>
 </a>
 </li>
@@ -582,14 +582,46 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
   <div class="call-us-area">
     <div class="container">
     <div class="row align-items-center">
-    <div class="col-lg-6">
+      <!-- our clientele -->
+<div class="container">
+  <h1>Our Trusted clients</h1>
+  <ul class="logogrid">
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Coca-Cola_logo.svg" class="logogrid__img" alt="Coca Cola">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" class="logogrid__img" alt="Google">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_B%C3%A9lo.svg" class="logogrid__img" alt="AirBnB">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" class="logogrid__img" alt="Spotify">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/de/f/f9/Guinness_Logo.svg" class="logogrid__img" alt="Guinness">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Audi-Logo_2016.svg" class="logogrid__img" alt="Audi">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" class="logogrid__img" alt="Nike">
+    </li>
+    <li class="logogrid__item">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" class="logogrid__img" alt="Netflix">
+    </li>
+  </ul>
+</div>
+
+    <!-- <div class="col-lg-6">
     <div class="call-contact">
     <h3>Call Us 24/7</h3>
-    <a href="tel:+256753300052" class="call-btn">+256 753300052</a>
+    <a href="tel:+256753300052" class="call-btn">+256 753300052</a><a href="contact.html" class="default-btn btn-bg-two border-radius-5">Contact Us</a>
     <p></p>
-    <a href="contact.html" class="default-btn btn-bg-two border-radius-5">Contact Us</a>
+    
+    
     </div>
-    </div>
+    </div> -->
     <!-- <div class="col-lg-6">
     <div class="call-us-img">
     <img src="assets/images/call-us/call-us-img1.png" alt="Images">
@@ -677,10 +709,6 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
   </div>
   </div>
   </section> -->
-
-
-
-
 
 
 
@@ -963,6 +991,7 @@ sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris
 </div>
 </div>
 </div> -->
+
 
 
 <footer class="footer-area footer-bg">
