add clients section

--- a/index.html
+++ b/index.html
@@ -587,28 +587,40 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
   <h1>Our Trusted clients</h1>
   <ul class="logogrid">
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Coca-Cola_logo.svg" class="logogrid__img" alt="Coca Cola">
+      <img src="assets/images/logos/Cclient1.png" class="logogrid__img" alt="Coca Cola">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" class="logogrid__img" alt="Google">
+      <img src="assets/images/logos/client 2.jpeg" class="logogrid__img" alt="Google">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_B%C3%A9lo.svg" class="logogrid__img" alt="AirBnB">
+      <img src="assets/images/logos/client 002.png" class="logogrid__img" alt="Google">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" class="logogrid__img" alt="Spotify">
+      <img src="assets/images/logos/client 3.jpeg" class="logogrid__img" alt="AirBnB">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/de/f/f9/Guinness_Logo.svg" class="logogrid__img" alt="Guinness">
+      <img src="assets/images/logos/client 4.jpeg" class="logogrid__img" alt="Spotify">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/Audi-Logo_2016.svg" class="logogrid__img" alt="Audi">
+      <img src="assets/images/logos/client 5.jpeg" class="logogrid__img" alt="Guinness">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" class="logogrid__img" alt="Nike">
+      <img src="assets/images/logos/client 6.jpeg" class="logogrid__img" alt="Audi">
     </li>
     <li class="logogrid__item">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" class="logogrid__img" alt="Netflix">
+      <img src="assets/images/logos/client 7.jpeg" class="logogrid__img" alt="Nike">
+    </li>
+    <li class="logogrid__item">
+      <img src="assets/images/logos/client 8.png" class="logogrid__img" alt="Netflix">
+    </li>
+    <li class="logogrid__item">
+      <img src="assets/images/logos/client 9.jpeg" class="logogrid__img" alt="Netflix">
+    </li>
+    <li class="logogrid__item">
+      <img src="assets/images/logos/client 10.png" class="logogrid__img" alt="Netflix">
+    </li>
+    <li class="logogrid__item">
+      <img src="assets/images/logos/client 11.jpeg" class="logogrid__img" alt="Netflix">
     </li>
   </ul>
 </div>
