--- a/index.html
+++ b/index.html
@@ -587,7 +587,10 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
   <h1>Our Trusted clients</h1>
   <ul class="logogrid">
     <li class="logogrid__item">
-      <img src="assets/images/logos/Cclient1.png" class="logogrid__img" alt="Coca Cola">
+      <img src="assets/images/logos/client 6.jpeg" class="logogrid__img" alt="Coca Cola">
+    </li>
+    <li class="logogrid__item">
+      <img src="assets/images/logos/client 7.jpeg" class="logogrid__img" alt="Coca Cola">
     </li>
     <li class="logogrid__item">
       <img src="assets/images/logos/client 2.jpeg" class="logogrid__img" alt="Google">
@@ -604,11 +607,9 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
     <li class="logogrid__item">
       <img src="assets/images/logos/client 5.jpeg" class="logogrid__img" alt="Guinness">
     </li>
+   
     <li class="logogrid__item">
-      <img src="assets/images/logos/client 6.jpeg" class="logogrid__img" alt="Audi">
-    </li>
-    <li class="logogrid__item">
-      <img src="assets/images/logos/client 7.jpeg" class="logogrid__img" alt="Nike">
+      <img src="assets/images/logos/Cclient1.png" class="logogrid__img" alt="Nike">
     </li>
     <li class="logogrid__item">
       <img src="assets/images/logos/client 8.png" class="logogrid__img" alt="Netflix">
