--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
 </li>
 </ul>
 </div>
-<!-- <div class="language-list">
-<select class="language-list-item">
-<option>English</option>
-<option>العربيّة</option>
-</select>
-</div> -->
+
 </div>
 </div>
 </div>
@@ -98,7 +93,7 @@
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
 <li class="nav-item">
-<a href="#" class="nav-link active">
+<a href="index.html" class="nav-link active">
 Home
 
 </a>
@@ -109,57 +104,25 @@ About Us
 <i class='bx bx-caret-down'></i>
 </a>
 <ul class="dropdown-menu">
+  <li class="nav-item">
+    <a href="aboutus.html" class="nav-link">
+    Who we are
+    </a>
 <li class="nav-item">
 <a href="team.html" class="nav-link">
 Our Team
 </a>
 </li>
-<li class="nav-item">
-<a href="aboutus.html" class="nav-link">
-Who we are
-</a>
+
 </li>
 <li class="nav-item">
-<a href="faq.html" class="nav-link">
-FAQ
+<a href="patnership.html" class="nav-link">
+Partnership
 </a>
 </li>
 
 </li>
-<!-- <li class="nav-item">
-<a href="#" class="nav-link">
-User
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="log-in.html" class="nav-link">
-Log In
-</a>
-</li>
-<li class="nav-item">
-<a href="register.html" class="nav-link">
-Registration
-</a>
-</li>
-<li class="nav-item">
-<a href="forget-password.html" class="nav-link">
-Forget Password
-</a>
-</li>
-</ul>
-</li> -->
 
-<!-- <li class="nav-item">
-<a href="404.html" class="nav-link">
-404 page
-</a>
-</li> -->
-<!-- <li class="nav-item">
-<a href="coming-soon.html" class="nav-link">
-Online Shopping Updates
-</a>
-</li> -->
 </ul>
 </li>
 <li class="nav-item">
@@ -167,27 +130,7 @@ Online Shopping Updates
 Expertise
 
 </a>
-<!-- <ul class="dropdown-menu">
-<li class="nav-item">
-<a href="services-1.html" class="nav-link">ERP Implementation & Support</a>
-</li>
-<li class="nav-item">
-<a href="services-2.html" class="nav-link">Software  Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Content Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Application Development</a>
-</li>
-<li class="nav-item">
- <a href="service-details.html" class="nav-link">Website Portfolio</a>
-</li>
-<li class="nav-item">
-    <a href="service-details.html" class="nav-link">Web, oracle & Network Solutions</a>
-    </li>
 
-</ul> -->
 </li>
 <li class="nav-item">
 <a href="#" class="nav-link">
@@ -204,11 +147,7 @@ Brands
 <a href="service.html" class="nav-link">
 Solutions / services</a>
 </li>
-<!-- <li class="nav-item">
-<a href="blog-details.html" class="nav-link">
-Blog Details
-</a>
-</li> -->
+
 </ul>
 </li>
 <li class="nav-item">
@@ -294,14 +233,7 @@ Contact
   <span>Only High Quality Services</span>
 
   <h1>Digital IT Service With Excellent Quality</h1>
-<!-- <p>
-  We provide the best in Customized Desktop Softwares, E-Commerce Websites, Educational Websites And Portals.
-</p> -->
 
-<!-- <div class="banner-btn">
-<a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">shop Online <i class='bx bx-chevron-right'></i></a>
-<a href="contact.html" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a>
-</div> -->
 </div>
 </div>
 </div>
@@ -314,13 +246,7 @@ Contact
 <div class="banner-item-content">
 <span>Only High Quality Solutions</span>
 <h1>We Provide Best IT Solutions for Your Needs</h1>
-<!-- <p>
-We have a wide range of products from our partner brands which include HP, DELL, LENOVO, APC, KINGSONS CISCO, SEAGATE and others
-</p> -->
-<!-- <div class="banner-btn">
-<a href="about.html" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
-<a href="contact.html" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a>
-</div> -->
+
 </div>
 </div>
 </div>
@@ -333,13 +259,7 @@ We have a wide range of products from our partner brands which include HP, DELL,
 <div class="banner-item-content">
 <span>Only High Quality Services</span>
 <h1>For Convenient Shopping</h1>
-<!-- <p>
-Go to our online store to shop remotely , Conveniently and rightly delivered to your doorstep.
-</p> -->
-<!-- <div class="banner-btn">
-<a href="about.html" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
-<a href="contact.html" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a>
-</div> -->
+
 </div>
 </div>
 </div>
@@ -349,31 +269,7 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
 </div>
 </div>
 
-<!-- clients -->
-<!-- <div class="brand-area ptb-100">
-  <div class="container">
-  <div class="brand-slider owl-carousel owl-theme">
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/HP.png"/>
-  </div>
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/DELL.png"/>
-  </div>
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/epson.png"/>
-  </div>
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/apc.png"/>
-  </div>
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/ids.png"/>
-  </div>
-  <div class="brand-item">
-    <img src="assets/images/brand-logo/lenovo.png"/>
-  </div>
-  </div>
-  </div>
-  </div> -->
+
 
 
 <div class="about-area ptb-100">
@@ -791,52 +687,7 @@ Go to our online store to shop remotely , Conveniently and rightly delivered to 
 </div>
 
 
-<!-- <section class="technology-area pt-100 pb-70">
-<div class="container">
-<div class="section-title text-center">
-<span class="sp-color1"></span>
-<h2>We Deliver Our Best Solution With The Goal of Trusting</h2>
-</div>
-<div class="row pt-45">
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/HP.png" alt="Images">
-</div>
-</div>
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/DELL.png" alt="Images">
-</div>
-</div>
-<div class="col-lg-2 col-6">
-  <div class="technology-card">
-    <img src="assets/images/brand-logo/apc-removebg-preview.png" alt="Images">
-  </div>
-  </div>
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/lenovo-removebg-preview.png" alt="Images">
-</div>
-</div>
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/logitech.png" alt="Images">
-</div>
-</div>
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/microsoft.png" alt="Images">
-</div>
-</div>
-<div class="col-lg-2 col-6">
-<div class="technology-card">
-  <img src="assets/images/brand-logo/kings.png" alt="Images">
 
-</div>
-</div>
-</div>
-</div>
-</section> -->
 
 
 <!-- <section class="clients-area pt-100 pb-70">
