--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
 <div class="col-lg-7 col-md-6">
 <div class="top-head-left">
 <div class="top-contact">
-<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 052</a></h3>
+<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 051</a></h3>
 
 </div>
 </div>
@@ -47,7 +47,7 @@
 <div class="top-header-social">
 <ul>
 <li>
-<a href="#" >
+<a href="https://www.facebook.com/lakhihightech" >
 <i class='bx bxl-facebook'></i>
 </a>
 </li>
@@ -68,12 +68,7 @@
 </li>
 </ul>
 </div>
-<!-- <div class="language-list">
-<select class="language-list-item">
-<option>English</option>
-<option>العربيّة</option>
-</select>
-</div> -->
+
 </div>
 </div>
 </div>
@@ -98,7 +93,7 @@
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
 <li class="nav-item">
-<a href="#" class="nav-link active">
+<a href="index.html" class="nav-link active">
 Home
 
 </a>
@@ -109,85 +104,33 @@ About Us
 <i class='bx bx-caret-down'></i>
 </a>
 <ul class="dropdown-menu">
+  <li class="nav-item">
+    <a href="aboutus.html" class="nav-link">
+    Who we are
+    </a>
 <li class="nav-item">
 <a href="team.html" class="nav-link">
 Our Team
 </a>
 </li>
-<li class="nav-item">
-<a href="aboutus.html" class="nav-link">
-Who we are
-</a>
+
 </li>
 <li class="nav-item">
-<a href="faq.html" class="nav-link">
-FAQ
+<a href="patnership.html" class="nav-link">
+Partnership
 </a>
 </li>
 
 </li>
-<!-- <li class="nav-item">
-<a href="#" class="nav-link">
-User
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="log-in.html" class="nav-link">
-Log In
-</a>
-</li>
-<li class="nav-item">
-<a href="register.html" class="nav-link">
-Registration
-</a>
-</li>
-<li class="nav-item">
-<a href="forget-password.html" class="nav-link">
-Forget Password
-</a>
-</li>
-</ul>
-</li> -->
 
-<!-- <li class="nav-item">
-<a href="404.html" class="nav-link">
-404 page
-</a>
-</li> -->
-<!-- <li class="nav-item">
-<a href="coming-soon.html" class="nav-link">
-Online Shopping Updates
-</a>
-</li> -->
 </ul>
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link">
+<a href="expertise.html" class="nav-link">
 Expertise
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="services-1.html" class="nav-link">ERP Implementation & Support</a>
-</li>
-<li class="nav-item">
-<a href="services-2.html" class="nav-link">Software  Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Content Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Application Development</a>
-</li>
-<li class="nav-item">
- <a href="service-details.html" class="nav-link">Website Portfolio</a>
-</li>
-<li class="nav-item">
-    <a href="service-details.html" class="nav-link">Web, oracle & Network Solutions</a>
-    </li>
 
-</ul>
+</a>
+
 </li>
 <li class="nav-item">
 <a href="#" class="nav-link">
@@ -196,7 +139,7 @@ Products & Services
 </a>
 <ul class="dropdown-menu">
 <li class="nav-item">
-<a href="brand.html" class="nav-link">
+<a href="brands.html" class="nav-link">
 Brands
 </a>
 </li>
@@ -204,11 +147,7 @@ Brands
 <a href="service.html" class="nav-link">
 Solutions / services</a>
 </li>
-<!-- <li class="nav-item">
-<a href="blog-details.html" class="nav-link">
-Blog Details
-</a>
-</li> -->
+
 </ul>
 </li>
 <li class="nav-item">
@@ -259,7 +198,6 @@ Contact
 </div>
 </div>
 </div>
-
 <div class="inner-banner">
     <div class="container">
     <div class="inner-title text-center">
