--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="assets/css/responsive.css">
 <link rel="icon" type="image/png" href="assets/images/favicon.jpg">
 <link rel="icon" type="image/png" href="https://www.littlesnippets.net/css/codepen-result.css">
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0" nonce="plAYMV7Q"></script>
 <title>LAKHI HIGHTECH</title>
 </head>
 <body>
@@ -47,22 +48,22 @@
 <div class="top-header-social">
 <ul>
 <li>
-<a href="https://www.facebook.com/lakhihightech" >
+<a href="https://www.facebook.com/lakhihightech/" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-facebook'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="#" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-twitter'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="https://www.linkedin.com/company/lakhi-hightech-ltd" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-linkedin-square'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="#" target="_blank" rel="noopener noreferrer">
 <i class='bx bxl-instagram'></i>
 </a>
 </li>
@@ -481,38 +482,44 @@ Contact
       <!-- our clientele -->
 <div class="container">
   <h1>Our Trusted clients</h1>
+  <br>
   <ul class="logogrid">
     <li class="logogrid__item">
-      <img src="assets/images/logos/client 6.jpeg" class="logogrid__img" alt="Coca Cola">
+      <img src="assets/images/logos/client06.jpeg" class="logogrid__img" alt="Coca Cola">
+       </li>
+      <li class="logogrid__item">
+      <img src="assets/images/logos/client007.jpeg" class="logogrid__img" alt="Coca Cola">
     </li>
+    
     <li class="logogrid__item">
-      <img src="assets/images/logos/client 7.jpeg" class="logogrid__img" alt="Coca Cola">
+      <img src="assets/images/logos/client12.png" class="logogrid__img" alt="AirBnB">
     </li>
     <li class="logogrid__item">
       <img src="assets/images/logos/client 2.jpeg" class="logogrid__img" alt="Google">
     </li>
     <li class="logogrid__item">
+      <img src="assets/images/logos/Cclient1.png" class="logogrid__img" alt="Nike">
+    </li>
+    <li class="logogrid__item">
       <img src="assets/images/logos/client 002.png" class="logogrid__img" alt="Google">
     </li>
     <li class="logogrid__item">
-      <img src="assets/images/logos/client 3.jpeg" class="logogrid__img" alt="AirBnB">
-    </li>
-    <li class="logogrid__item">
-      <img src="assets/images/logos/client 4.jpeg" class="logogrid__img" alt="Spotify">
+      <img src="assets/images/logos/client13.png" class="logogrid__img" alt="Netflix">
     </li>
     <li class="logogrid__item">
       <img src="assets/images/logos/client 5.jpeg" class="logogrid__img" alt="Guinness">
     </li>
-   
     <li class="logogrid__item">
-      <img src="assets/images/logos/Cclient1.png" class="logogrid__img" alt="Nike">
+      <img src="assets/images/logos/client 3.jpeg" class="logogrid__img" alt="Netflix">
     </li>
-    <li class="logogrid__item">
+  
+      <li class="logogrid__item">
+      <img src="assets/images/logos/client 4.jpeg" class="logogrid__img" alt="Spotify">
+    </li>
+      <li class="logogrid__item">
       <img src="assets/images/logos/client 8.png" class="logogrid__img" alt="Netflix">
     </li>
-    <li class="logogrid__item">
-      <img src="assets/images/logos/client 9.jpeg" class="logogrid__img" alt="Netflix">
-    </li>
+  
     <li class="logogrid__item">
       <img src="assets/images/logos/client 10.png" class="logogrid__img" alt="Netflix">
     </li>
@@ -864,126 +871,63 @@ sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris
 <div class="row">
 <div class="col-lg-4 col-sm-6">
 <div class="footer-widget">
-<div class="footer-logo">
+<!-- <div class="footer-logo">
 <a href="index.html">
-<img src="assets/images/logos/logo-1.PNG" alt="Images">
 </a>
-</div>
+</div> -->
 <p>
 
 </p>
+
 <div class="footer-call-content">
-<h3>Talk to Our Support</h3>
+<h3>Talk to Us </h3>
 <span><a href="tel:+256753300052">+256753300052</a></span>
 <i class='bx bx-headphone'></i>
 </div>
 </div>
 </div>
+
+<div class="col-lg-3 col-sm-6">
+  <div class="footer-widget">
+  <h3>About us</h3>
+<p>Lakhi Hightech Limited has been in operation for over 10 years in the supply of ICT Equipment(hardware), IT soluitons and networking</p>
+  </div>
+  </div>
+
+
+
+<div class="col-lg-3 col-sm-6">
+  <div class="footer-widget">
+  <h3>Contact us</h3>
+  <p><span>0753300052 / 0753300059</span></p>
+  <p><span>Email us on:info@lakhi-hitech.com</span></p>
+  <div class="newsletter-area">
+  <form class="newsletter-form" data-toggle="validator" method="POST">
+  <input type="email" class="form-control" placeholder="Enter Your Email" name="EMAIL" required autocomplete="off">
+  <button class="subscribe-btn" type="submit">
+  <i class='bx bx-paper-plane'></i>
+  </button>
+  <div id="validator-newsletter" class="form-result"></div>
+  </form>
+  </div>
+  </div>
+  </div>
+
 <div class="col-lg-2 col-sm-6">
-<div class="footer-widget pl-2">
-<h3>Services</h3>
-<ul class="footer-list">
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
-ERP Implementation & support
-</a>
-</li>
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
-Softare Development
-</a>
-</li>
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
-Content Development
-</a>
-</li>
-<li>
-<a href="compare.html" >
-<i class='bx bx-chevron-right'></i>
-Application Development
-</a>
-</li>
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
-Website Portfolio
-</a>
-</li>
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
- Web - solutions
-</a>
-</li>
-<li>
-<a href="service-details.html" >
-<i class='bx bx-chevron-right'></i>
-Network Solutions
-</a>
-</li>
-</ul>
+  <div class="footer-widget">
+  <h3>Follow us on</h3>
+  <div id="fb-root"></div>
+  <div class="fb-page" data-href="https://www.facebook.com/lakhihightech/" data-tabs="timeline" data-width="" data-height="100" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+    <blockquote cite="https://www.facebook.com/lakhihightech/" class="fb-xfbml-parse-ignore">
+      <a href="https://www.facebook.com/lakhihightech/">Lakhi-Hightech Ug Ltd</a></blockquote></div>
 </div>
 </div>
-<div class="col-lg-3 col-sm-6">
-<div class="footer-widget pl-5">
-<h3>Our Blog</h3>
-<ul class="footer-blog">
-<li>
-<a href="blog-details.html">
-<img src="assets/images/blog/blog-img-footer.jpg" alt="Images">
-</a>
-<div class="content">
-<h3><a href="blog-details.html">Product Idea Solution For New Generation</a></h3>
-<span>04 Dec 2021</span>
-</div>
-</li>
-<li>
-<a href="blog-details.html">
-<img src="assets/images/blog/blog-img-footer2.jpg" alt="Images">
-</a>
-<div class="content">
-<h3><a href="blog-details.html">New Device Invention for Digital Platform</a></h3>
-<span>07 Dec 2021</span>
-</div>
-</li>
-<li>
-<a href="blog-details.html">
-<img src="assets/images/blog/blog-img-footer3.jpg" alt="Images">
-</a>
-<div class="content">
-<h3><a href="blog-details.html">Business Strategy Make His Goal Acheive</a></h3>
-<span>10 Dec 2021</span>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="col-lg-3 col-sm-6">
-<div class="footer-widget">
-<h3>Newsletter</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus molestie molestie. Phasellus ac rutrum massa, et volutpat nisl. Fusce ultrices suscipit nisl.</p>
-<div class="newsletter-area">
-<form class="newsletter-form" data-toggle="validator" method="POST">
-<input type="email" class="form-control" placeholder="Enter Your Email" name="EMAIL" required autocomplete="off">
-<button class="subscribe-btn" type="submit">
-<i class='bx bx-paper-plane'></i>
-</button>
-<div id="validator-newsletter" class="form-result"></div>
-</form>
-</div>
-</div>
-</div>
-</div>
-</div>
+
 <div class="copy-right-area">
 <div class="copy-right-text">
  <p>
 Copyright ©2021. All Rights Reserved by 
-<a href="#" >Lakhi hightech ltd</a>
+<a href="#" >LAKHI HIGHTECH LIMITED</a>
 </p>
 </div>
 </div>
