--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 </div>
 
@@ -89,7 +90,8 @@
 <div class="container">
 <nav class="navbar navbar-expand-md navbar-light ">
 <a class="navbar-brand" href="index.html">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
@@ -163,11 +165,11 @@ Contact
 <i class='bx bx-search'></i>
 </div>
 </div>
-<div class="nav-side-item">
+<!-- <div class="nav-side-item">
 <div class="get-btn">
 <a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
 </div>
-</div>
+</div> -->
 </div>
 </div>
 </nav>
@@ -233,7 +235,7 @@ Contact
 <div class="banner-item-content">
   <span>Only High Quality Services</span>
 
-  <h1>Digital IT Service With Excellent Quality</h1>
+  <!-- <h1>Digital IT Service With Excellent Quality</h1> -->
 
 </div>
 </div>
@@ -245,8 +247,15 @@ Contact
 <div class="d-table-cell">
 <div class="container">
 <div class="banner-item-content">
-<span>Only High Quality Solutions</span>
-<h1>We Provide Best IT Solutions for Your Needs</h1>
+<!-- <span>Only High Quality Solutions</span> -->
+<!-- <div class=banner-item-image>
+<img src="assets/images/brand-logo/apc-removebg-preview.png">
+<img src="assets/images/brand-logo/HP.png">
+<img src="assets/images/brand-logo/lenovo-removebg-preview.png">
+<img src="assets/images/brand-logo/aruba-removebg-preview.png">
+<img src="assets/images/brand-logo/cisco-removebg-preview.png">
+<img src="assets/images/brand-logo/hewlet-removebg-preview.png">
+</div> -->
 
 </div>
 </div>
@@ -259,7 +268,7 @@ Contact
 <div class="container">
 <div class="banner-item-content">
 <span>Only High Quality Services</span>
-<h1>For Convenient Shopping</h1>
+<!-- <h1>For Convenient Shopping</h1> -->
 
 </div>
 </div>
