--- a/aboutus.html
+++ b/aboutus.html
@@ -200,7 +200,7 @@ Contact
 </div>
 </div>
 </div>
-<div class="inner-banner">
+<!-- <div class="inner-banner">
     <div class="container">
     <div class="inner-title text-center">
     <h3>Who we are</h3>
@@ -241,11 +241,105 @@ Contact
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
-
-
-<footer class="footer-area footer-bg">
+<div class="banner-area-two">
+  <div class="container-fluid">
+  <div class="container-max">
+  <div class="row align-items-center">
+  <div class="col-lg-5">
+  <div class="banner-content">
+  <h1><span class=" banner-head">Lakhi Hightech Ltd</span> was Incorporated as a private limited company by the government of uganda on 15th July, 2011</h1>
+  <p>
+   and is one of the leading IT companies to reckon with. Our success is driven by our professionals and thier commitment to get results the right way by operating responsibly, executing with exellence
+  </p>
+  <div class="banner-btn">
+  <!-- <a href="#" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
+  <a href="#" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a> -->
+  </div>
+  </div>
+  </div>
+  <div class="col-lg-7">
+  <div class="banner-img">
+  <img src="assets/images/about/about-img1.png" alt="Images">
+  <div class="banner-img-shape">
+  <img src="assets/images/home-three/home-three-shape.png" alt="Images">
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="container">
+  <div class="banner-sub-slider owl-carousel owl-theme">
+  <div class="banner-sub-item">
+  <!-- <img src="assets/images/home-three/home-three-sub1.jpg" alt="Images"> -->
+  <div class="content">
+  <h3>Our Vision</h3>
+  <span>Our vision is to simply, be the leading seller of software and hardware for all sized business traders in Uganda </span>
+  </div>
+  </div>
+  <div class="banner-sub-item">
+  <!-- <img src="assets/images/home-three/home-three-sub2.jpg" alt="Images"> -->
+  <div class="content">
+  <h3>Our Mission</h3>
+  <span>We strive to be the best in our field when it comes to quality, cost efficient IT solutions and client statisfaction</span>
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  
+  
+  <!-- <div class="about-area about-bg pt-100 pb-70">
+  <div class="container">
+  <div class="row align-items-center">
+  <div class="col-lg-6">
+  <div class="about-img-2">
+  <img src="assets/images/about/about-img3.jpg" alt="About Images">
+  </div>
+  </div>
+  <div class="col-lg-6">
+  <div class="about-content-2 ml-20">
+  <div class="section-title">
+  <span class="sp-color1">About Us</span>
+  <h2>Right Partner for Software Innovation</h2>
+  <p>
+  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
+  Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum auctor a ornare odio.
+  </p>
+  </div>
+  <div class="row">
+  <div class="col-lg-6 col-6">
+  <div class="about-card">
+  <div class="content">
+  <i class="flaticon-practice"></i>
+  <h3>Experience</h3>
+  </div>
+  <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+  </div>
+  </div>
+   <div class="col-lg-6 col-6">
+  <div class="about-card">
+  <div class="content">
+  <i class="flaticon-help"></i>
+  <h3>Quick Support</h3>
+  </div>
+  <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div> -->
+  
+  
+  <footer class="footer-area footer-bg">
   <div class="container">
   <div class="footer-top pt-100 pb-70">
   <div class="row">
