--- a/index.html
+++ b/index.html
@@ -364,71 +364,102 @@ Contact
   <div class="section-title text-center">
     <!-- <span class="sp-color1">Our Services</span> -->
     <h2>Our Brand Partners</h2>
-    <!-- <p class="margin-auto">
-      As adoption of new web technologies for interaction continues to rise at unprecedented levels, the expectations from the ecosystem of businesses are also evolving. Businesses are responding with offerings and solutions that leverage this knowledge to be more personal, intelligent and contextual in each interaction with their stakeholders. Leading to new revenue streams and increased operational efficiency.
-    </p>
-    <p class="margin-auto">Enterprises need to rapidly bring in this innovation to their offerings in a way that it leverages existing investments and does not create new problems in the future - and make the right technology choices in a standardized, re-usable manner. In addition to adopting the right technology for their requirements, they also need viable models for support and management on an ongoing basis.</p>
-  <p class="margin-auto">Lakhi hightech Ltd. is focused on accelerating this adoption of new technologies for enterprises with its unique stack of products and services.</p>  -->
-
-  <div class="brand-area ptb-100">
-    <div class="container">
-    <div class="brand-slider owl-carousel owl-theme">
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/HP.png" alt="Images">
-    </div>
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/DELL.png" alt="Images">
-    </div>
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/lenovo-removebg-preview.png" alt="Images">
-    </div>
-    <div class="brand-item">
-      <img src="assets/images/brand-logo/apc-removebg-preview.png" alt="Images">
-      </div>
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/logitech.png" alt="Images">
-    </div>
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/microsoft-removebg-preview.png" alt="Images">
-    </div>
-    <div class="brand-item">
-    <img src="assets/images/brand-logo/samsung-removebg-preview.png" alt="Images">
-    </div>
-    <div class="brand-item">
-      <img src="assets/images/brand-logo/ids-removebg-preview.png" alt="Images">
-      </div>
-      <div class="brand-item">
-        <img src="assets/images/brand-logo/kings.jpg" alt="Images">
-        </div>
-        <div class="brand-item">
-          <img src="assets/images/brand-logo/oracle-removebg-preview.png" alt="Images">
+    <div class="logo-scroller-wrap">
+      <div class="logo-scroller" data-paused="false">
+        <div class="logo-scroller__row">
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/HP.png" alt="Images">
+            </div>
           </div>
-            <div class="brand-item">
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/DELL.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/lenovo-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/apc-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/logitech.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/microsoft-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/samsung-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/ids-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+        </div>
+        
+        <div class="logo-scroller__row">
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/kings.jpg" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/oracle-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
               <img src="assets/images/brand-logo/sap-removebg-preview.png" alt="Images">
-              </div>
-            <div class="brand-item">
-            <img src="assets/images/brand-logo/schneider-removebg-preview.png" alt="Images">
             </div>
-            <div class="brand-item">
-            <img src="assets/images/brand-logo/seagate-removebg-preview.png" alt="Images">
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/schneider-removebg-preview.png" alt="Images">
             </div>
-            <div class="brand-item">
-            <img src="assets/images/brand-logo/transc-removebg-preview.png" alt="Images">
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/seagate-removebg-preview.png" alt="Images">
             </div>
-  
-              <div class="brand-item">
-                <img src="assets/images/brand-logo/aruba-removebg-preview.png" alt="Images">
-                </div>
-                <div class="brand-item">
-                  <img src="assets/images/brand-logo/cisco-removebg-preview.png" alt="Images">
-                  </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/transc-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/aruba-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+          <div class="logo-scroller__item">
+            <div class="logo-scroller__logo">
+              <img src="assets/images/brand-logo/cisco-removebg-preview.png" alt="Images">
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="logo-scroller__actions">
+        <button class="logo-scroller__pause">Pause</button>
       </div>
     </div>
-    </div>
-    </div>
-</div>
-</div>
-</div>
+   
+<!--  -->
+ 
 <div class="service-shape">
 <img src="assets/images/shape/service-shape1.png" alt="Images">
 </div>
@@ -559,6 +590,47 @@ Contact
 </div>
 </div>
 
+<!-- projects -->
+
+<section class="project-card">
+  <div class="section-title text-center">
+    <!-- <span class="sp-color2">Case Study</span> -->
+    <h2>Our Projects completed </h2>
+    </div>
+<ul class="cards">
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--fence"></div>
+      <div class="card__content">
+        <div class="card__title">Roofings (U) Ltd</div>
+        <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink and flex-basis) are optional. Default is 0 1 auto. </p>
+        <button class="btn btn--block card__btn"><img src="assets/images/case-study/SAP.jpeg"></button>
+      </div>
+    </div>
+  </li>
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--river"></div>
+      <div class="card__content">
+        <div class="card__title">Delhi Public Int' School</div>
+        <p class="card__text">This defines the ability for a flex item to grow if necessary. </p>
+        <button class="btn btn--block card__btn"><img src="assets/images/case-study/ERP.jpeg"></button>
+      </div>
+    </div>
+  </li>
+  <li class="cards__item">
+    <div class="card">
+      <div class="card__image card__image--record"></div>
+      <div class="card__content">
+        <div class="card__title">City Oil (U)</div>
+        <p class="card__text">This defines the ability for a flex item to shrink if necessary. Negative numbers are invalid.</p>
+        <button class="btn btn--block card__btn">Button</button>
+      </div>
+    </div>
+  </li>
+ 
+</ul>
+</section>
 
 
 
