--- a/expertise.html
+++ b/expertise.html
@@ -19,7 +19,6 @@
 <link rel="icon" type="image/png" href="assets/images/favicon.jpg">
 <link rel="icon" type="image/png" href="https://www.littlesnippets.net/css/codepen-result.css">
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0" nonce="plAYMV7Q"></script>
-
 <title>LAKHI HIGHTECH</title>
 </head>
 <body>
@@ -49,24 +48,24 @@
 <div class="top-header-social">
 <ul>
 <li>
-    <a href="https://www.facebook.com/lakhihightech/" target="_blank" rel="noopener noreferrer" >
-        <i class='bx bxl-facebook'></i>
-        </a>
-        </li>
-        <li>
-        <a href="#" target="_blank" rel="noopener noreferrer" >
-        <i class='bx bxl-twitter'></i>
-        </a>
-        </li>
-        <li>
-        <a href="https://www.linkedin.com/company/lakhi-hightech-ltd" target="_blank" rel="noopener noreferrer" >
-        <i class='bx bxl-linkedin-square'></i>
-        </a>
-        </li>
-        <li>
-        <a href="#" target="_blank" rel="noopener noreferrer">
-        <i class='bx bxl-instagram'></i>
-        </a>
+<a href="https://www.facebook.com/lakhihightech/" target="_blank" rel="noopener noreferrer" >
+<i class='bx bxl-facebook'></i>
+</a>
+</li>
+<li>
+<a href="#" target="_blank" rel="noopener noreferrer" >
+<i class='bx bxl-twitter'></i>
+</a>
+</li>
+<li>
+<a href="https://www.linkedin.com/company/lakhi-hightech-ltd" target="_blank" rel="noopener noreferrer" >
+<i class='bx bxl-linkedin-square'></i>
+</a>
+</li>
+<li>
+<a href="#" target="_blank" rel="noopener noreferrer">
+<i class='bx bxl-instagram'></i>
+</a>
 </li>
 </ul>
 </div>
@@ -82,7 +81,8 @@
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 </div>
 
@@ -90,7 +90,8 @@
 <div class="container">
 <nav class="navbar navbar-expand-md navbar-light ">
 <a class="navbar-brand" href="index.html">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
@@ -132,26 +133,23 @@ Partnership
 Expertise
 
 </a>
-
 </li>
+
 <li class="nav-item">
-<a href="#" class="nav-link">
-Products & Services
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="brands.html" class="nav-link">
+  <a href="service.html" class="nav-link">
+products/services
+  
+  </a>
+  </li>
+
+  <li class="nav-item">
+    <a href="brands.html" class="nav-link">
 Brands
-</a>
-</li>
-<li class="nav-item">
-<a href="service.html" class="nav-link">
-Solutions / services</a>
-</li>
+    
+    </a>
+    </li>
 
-</ul>
-</li>
+
 <li class="nav-item">
 <a href="contact.html" class="nav-link">
 Contact
@@ -164,11 +162,11 @@ Contact
 <i class='bx bx-search'></i>
 </div>
 </div>
-<div class="nav-side-item">
+<!-- <div class="nav-side-item">
 <div class="get-btn">
 <a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
 </div>
-</div>
+</div> -->
 </div>
 </div>
 </nav>
@@ -243,7 +241,7 @@ Contact
 </div>
 </div>
 
-
+<section class="about-background">
 <section class="services-style-area pt-100 pb-70">
 <div class="container">
 <div class="section-title text-center">
@@ -339,7 +337,7 @@ Contact
 </div>
 </div>
 </section>
-
+</section>
 
 
 <footer class="footer-area footer-bg">
