--- a/team.html
+++ b/team.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="assets/css/responsive.css">
 <link rel="icon" type="image/png" href="assets/images/favicon.jpg">
 <link rel="icon" type="image/png" href="https://www.littlesnippets.net/css/codepen-result.css">
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0" nonce="plAYMV7Q"></script>
 <title>LAKHI HIGHTECH</title>
 </head>
 <body>
@@ -37,7 +38,7 @@
 <div class="col-lg-7 col-md-6">
 <div class="top-head-left">
 <div class="top-contact">
-<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 052</a></h3>
+<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 051</a></h3>
 
 </div>
 </div>
@@ -47,33 +48,28 @@
 <div class="top-header-social">
 <ul>
 <li>
-<a href="#" >
+<a href="https://www.facebook.com/lakhihightech/" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-facebook'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="#" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-twitter'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="https://www.linkedin.com/company/lakhi-hightech-ltd" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-linkedin-square'></i>
 </a>
 </li>
 <li>
-<a href="#" >
+<a href="#" target="_blank" rel="noopener noreferrer">
 <i class='bx bxl-instagram'></i>
 </a>
 </li>
 </ul>
 </div>
-<!-- <div class="language-list">
-<select class="language-list-item">
-<option>English</option>
-<option>العربيّة</option>
-</select>
-</div> -->
+
 </div>
 </div>
 </div>
@@ -85,7 +81,8 @@
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 </div>
 
@@ -93,12 +90,13 @@
 <div class="container">
 <nav class="navbar navbar-expand-md navbar-light ">
 <a class="navbar-brand" href="index.html">
-<img src="assets/images/logos/logo-1.png" alt="Logo">
+  <h1>LAKHI HIGHTECH LTD</h1>
+<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
 <li class="nav-item">
-<a href="#" class="nav-link active">
+<a href="index.html" class="nav-link active">
 Home
 
 </a>
@@ -109,108 +107,49 @@ About Us
 <i class='bx bx-caret-down'></i>
 </a>
 <ul class="dropdown-menu">
+  <li class="nav-item">
+    <a href="aboutus.html" class="nav-link">
+    Who we are
+    </a>
 <li class="nav-item">
 <a href="team.html" class="nav-link">
 Our Team
 </a>
 </li>
-<li class="nav-item">
-<a href="aboutus.html" class="nav-link">
-Who we are
-</a>
+
 </li>
 <li class="nav-item">
-<a href="faq.html" class="nav-link">
-FAQ
+<a href="patnership.html" class="nav-link">
+Partnership
 </a>
 </li>
 
 </li>
-<!-- <li class="nav-item">
-<a href="#" class="nav-link">
-User
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="log-in.html" class="nav-link">
-Log In
-</a>
-</li>
-<li class="nav-item">
-<a href="register.html" class="nav-link">
-Registration
-</a>
-</li>
-<li class="nav-item">
-<a href="forget-password.html" class="nav-link">
-Forget Password
-</a>
-</li>
-</ul>
-</li> -->
 
-<!-- <li class="nav-item">
-<a href="404.html" class="nav-link">
-404 page
-</a>
-</li> -->
-<!-- <li class="nav-item">
-<a href="coming-soon.html" class="nav-link">
-Online Shopping Updates
-</a>
-</li> -->
 </ul>
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link">
+<a href="expertise.html" class="nav-link">
 Expertise
-<i class='bx bx-caret-down'></i>
+
 </a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="services-1.html" class="nav-link">ERP Implementation & Support</a>
 </li>
+
 <li class="nav-item">
-<a href="services-2.html" class="nav-link">Software  Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Content Development</a>
-</li>
-<li class="nav-item">
-<a href="service-details.html" class="nav-link">Application Development</a>
-</li>
-<li class="nav-item">
- <a href="service-details.html" class="nav-link">Website Portfolio</a>
-</li>
-<li class="nav-item">
-    <a href="service-details.html" class="nav-link">Web, oracle & Network Solutions</a>
+  <a href="service.html" class="nav-link">
+products/services
+  
+  </a>
+  </li>
+
+  <li class="nav-item">
+    <a href="brands.html" class="nav-link">
+Brands
+    
+    </a>
     </li>
 
-</ul>
-</li>
-<li class="nav-item">
-<a href="#" class="nav-link">
-Products & Services
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="brand.html" class="nav-link">
-Brands
-</a>
-</li>
-<li class="nav-item">
-<a href="service.html" class="nav-link">
-Solutions / services</a>
-</li>
-<!-- <li class="nav-item">
-<a href="blog-details.html" class="nav-link">
-Blog Details
-</a>
-</li> -->
-</ul>
-</li>
+
 <li class="nav-item">
 <a href="contact.html" class="nav-link">
 Contact
@@ -223,11 +162,11 @@ Contact
 <i class='bx bx-search'></i>
 </div>
 </div>
-<div class="nav-side-item">
+<!-- <div class="nav-side-item">
 <div class="get-btn">
 <a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
 </div>
-</div>
+</div> -->
 </div>
 </div>
 </nav>
@@ -259,7 +198,6 @@ Contact
 </div>
 </div>
 </div>
-
 
 <div class="search-overlay">
 <div class="d-table">
