--- a/brands.html
+++ b/brands.html
@@ -243,7 +243,7 @@ Contact
         <div class="container">
         <div class="section-title text-center">
         <span class="sp-color2">Technology brand</span>
-        <h2>We deliver all your products as per your specifications and brand</h2>
+        <h2>We deliver all your products and solution as per your specifications and brand</h2>
         </div>
         
 
@@ -380,6 +380,8 @@ Contact
           </div>
         </div>
         </section>
+
+        
  
 
   
