--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="col-lg-7 col-md-6">
 <div class="top-head-left">
 <div class="top-contact">
-<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 051</a></h3>
+<h3>Contact Us on : <a href="tel:+256773300051">+256 773 300 051</a></h3>
 
 </div>
 </div>
@@ -83,7 +83,7 @@
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-  <h1>LAKHI HIGHTECH LTD</h1>
+  <h1><img src="assets/images/logos/logo.jpg" style="width:10%;">LAKHI HIGHTECH LTD</h1>
 <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 </div>
@@ -92,7 +92,7 @@
 <div class="container">
 <nav class="navbar navbar-expand-md navbar-light ">
 <a class="navbar-brand" href="index.html">
-  <h1>LAKHI HIGHTECH LTD</h1>
+  <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
 <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 
@@ -107,7 +107,7 @@
 <a href="#" class="nav-link">
 About Us
 <i class='bx bx-caret-down'></i>
-</a>
+</a> 
 <ul class="dropdown-menu">
   <li class="nav-item">
     <a href="aboutus.html" class="nav-link">
@@ -125,7 +125,6 @@ Our Team
 Partnership
 </a>
 </li>
-
 </li>
 
 </ul>
@@ -133,7 +132,6 @@ Partnership
 <li class="nav-item">
 <a href="expertise.html" class="nav-link">
 Expertise
-
 </a>
 </li>
 
@@ -147,7 +145,6 @@ products/services
   <li class="nav-item">
     <a href="brands.html" class="nav-link">
 Brands
-    
     </a>
     </li>
 
@@ -222,9 +219,6 @@ Contact
 </div>
 </div>
 </div>
-
-
-
 
 <div class="banner-slider-area">
 <div class="banner-slider owl-carousel owl-theme">
@@ -447,6 +441,7 @@ Contact
       </div>
 
 <!--  -->
+
 </section>
 </section>
 
