--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
 <div class="col-lg-7 col-md-6">
 <div class="top-head-left">
 <div class="top-contact">
-<h3>Contact Us on : <a href="tel:+25673300052">+256 753 300 051</a></h3>
+<h3>Contact Us on : <a href="tel:+256773300051">+256 773 300 051</a></h3>
 
 </div>
 </div>
@@ -53,7 +53,7 @@
 </a>
 </li>
 <li>
-<a href="#" target="_blank" rel="noopener noreferrer" >
+<a href="https://www.twitter.com/lakhihightech/" target="_blank" rel="noopener noreferrer" >
 <i class='bx bxl-twitter'></i>
 </a>
 </li>
@@ -63,7 +63,7 @@
 </a>
 </li>
 <li>
-<a href="#" target="_blank" rel="noopener noreferrer">
+<a href="https://www.instagram.com/lakhihitech/" target="_blank" rel="noopener noreferrer">
 <i class='bx bxl-instagram'></i>
 </a>
 </li>
@@ -81,7 +81,7 @@
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-  <h1>LAKHI HIGHTECH LTD</h1>
+  <h1><img src="assets/images/logos/logo.jpg" style="width:10%;">LAKHI HIGHTECH LTD</h1>
 <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 </div>
@@ -90,7 +90,7 @@
 <div class="container">
 <nav class="navbar navbar-expand-md navbar-light ">
 <a class="navbar-brand" href="index.html">
-  <h1>LAKHI HIGHTECH LTD</h1>
+  <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
 <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
